err/valentine.multiparagraphpage.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/valentine'...
Listing './lib/python3.5/site-packages/valentine/contentportlets'...
Listing './lib/python3.5/site-packages/valentine/contentportlets/browser'...
Compiling './lib/python3.5/site-packages/valentine/contentportlets/browser/contentportlets.py'...
***   File "./lib/python3.5/site-packages/valentine/contentportlets/browser/contentportlets.py", line 92
    self.portlets = [p for p in self.portlets if p['name']<>portlet['name']]
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/valentine/contentportlets/browser/templates'...
Listing './lib/python3.5/site-packages/valentine/contentportlets/manager'...
Listing './lib/python3.5/site-packages/valentine/contentportlets/profiles'...
Listing './lib/python3.5/site-packages/valentine/contentportlets/profiles/default'...
Listing './lib/python3.5/site-packages/valentine/contentportlets/tests'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphfield'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphfield/field'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphfield/widget'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/browser'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/browser/migration'...
Compiling './lib/python3.5/site-packages/valentine/multiparagraphpage/browser/migration/migrate.py'...
***   File "./lib/python3.5/site-packages/valentine/multiparagraphpage/browser/migration/migrate.py", line 46
    print newObj.absolute_url()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/content'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/interfaces'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/profiles'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/profiles/default'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/profiles/default/types'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/skins'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/skins/multiparagraphpage_templates'...
Listing './lib/python3.5/site-packages/valentine/multiparagraphpage/tests'...
Listing './lib/python3.5/site-packages/valentine.contentportlets-0.1.egg-info'...
Listing './lib/python3.5/site-packages/valentine.multiparagraphfield-0.4.egg-info'...
Listing './lib/python3.5/site-packages/valentine.multiparagraphpage-0.4.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
